# Houdini_IPC_CUDA

./: .gitignore  CMakeLists.txt  GPU_IPC_CLOTH.hip  GPU_IPC_SOLID.hip  GPU_IPC_SOLID_local.hip  README.md  constlog.txt  test_combine_opencl_&_CUDA.hip
CODE_HDK_GPU_IPC/: CMakeLists.txt  计划.txt
CODE_HDK_GPU_IPC/src/: CMakeLists.txt  common_init.cpp
CODE_HDK_GPU_IPC/src/ACCD/: ACCD.cu  ACCD.cuh  main_ACCD.cpp  main_ACCD.hpp
CODE_HDK_GPU_IPC/src/CCD/: ACCD.cu  ACCD.cuh  LBVH.cu  LBVH.cuh  SortMesh.cu  main_ACCD.cpp  main_ACCD.hpp  main_LBVH.cpp  main_LBVH.hpp
CODE_HDK_GPU_IPC/src/FEM/: FEMEnergy.cu  FEMEnergy.cuh
CODE_HDK_GPU_IPC/src/IPC/: GIPC.cu  GIPC.cuh  GIPCPDerivative.cu  GIPCPDerivative.cuh  IPCFriction.cu  IPCFriction.cuh  main_GIPC.cpp
CODE_HDK_GPU_IPC/src/LBVH/: LBVH.cu  LBVH.cuh  SortMesh.cu  SortMesh.cuh  main_LBVH.cpp  main_LBVH.hpp
CODE_HDK_GPU_IPC/src/PCG/: PCGSolver.cu  PCGSolver.cuh
CODE_HDK_GPU_IPC/src/RWBuffer/: main_readBuffer.cpp  main_readBuffer.hpp  main_writeBuffer.cpp  main_writeBuffer.hpp
CODE_HDK_GPU_IPC/src/UTILS/: CUDAUtils.hpp  GeometryManager.cpp  GeometryManager.hpp  HoudiniUtils.hpp  MathUtils.cu  MathUtils.cuh  MathUtils.hpp  cuda_kernels.cu  cuda_kernels.cuh  main_transformLissajous.cpp  main_transformLissajous.hpp
CODE_HDK_GPU_IPC_study/: CMakeLists.txt  timeCost.txt
CODE_HDK_GPU_IPC_study/src/: common_init.cpp
CODE_HDK_GPU_IPC_study/src/ACCD/: ACCD.cu  ACCD.cuh  main_ACCD.hpp
CODE_HDK_GPU_IPC_study/src/FEM/: FEMEnergy.cu  FEMEnergy.cuh  main_FEMEnergy.cpp
CODE_HDK_GPU_IPC_study/src/INTEGRATOR/: ImplicitIntergrator.cu  ImplicitIntergrator.cuh  main_Intergrator.cpp  main_Intergrator.hpp
CODE_HDK_GPU_IPC_study/src/IPC/: GIPC.cu  GIPC.cuh  IPCFriction.cuh  main_GIPC.cpp  main_GIPC.hpp
CODE_HDK_GPU_IPC_study/src/LBVH/: LBVH.cu  LBVH.cuh  SortMesh.cu  SortMesh.cuh  main_LBVH.cpp
CODE_HDK_GPU_IPC_study/src/PCG/: BHessian.cu  BHessian.cuh  MASPreconditioner.cu  MASPreconditioner.cuh  PCGSolver.cu  PCGSolver.cuh  main_PCGSolver.cpp
CODE_HDK_GPU_IPC_study/src/RWBuffer/: main_collisionBuffer.cpp  main_collisionBuffer.hpp  main_readBuffer.cpp  main_readBuffer.hpp  main_writeBuffer.cpp  main_writeBuffer.hpp
CODE_HDK_GPU_IPC_study/src/UTILS/: CUDAUtils.hpp  GeometryManager.cpp  GeometryManager.hpp  HoudiniUtils.hpp  MathUtils.cu  MathUtils.cuh  MathUtils.hpp
CODE_Multiple_CUDA_Transpose/src/: common_init.cpp  cuda_kernels.cu  main_transformLissajous.cpp  main_writeBuffer.cpp  public_functions.cpp
CODE_OpenCL_CUDA_Transpose/: CMakeLists.txt  main_test.cpp  main_test.hpp  public_functions.hpp
GPU_IPC_Ref/: CMakeLists.txt
GPU_IPC_Ref/GPU_IPC/: GIPC.cu  PCG_SOLVER.cu  gl_main.cpp
Multiple_CUDA_Transpose_code/: CMakeLists.txt
Multiple_CUDA_Transpose_code/src/: CMakeLists.txt  main_readBuffer.hpp  main_transformLissajous.hpp  public_functions.hpp
OpenCL_CUDA_Transpose_code/: main.hpp
PythonScripts/: checkTriBend.py
TEST_CODE/CODE_Multiple_CUDA_Transpose/: CMakeLists.txt
TEST_CODE/CODE_Multiple_CUDA_Transpose/src/: CMakeLists.txt  cuda_kernels.cuh  main_readBuffer.cpp  main_writeBuffer.hpp
TEST_CODE/CODE_OpenCL_CUDA_Transpose/: main.cpp  original.cpp
TEST_CODE/GPU_IPC_Ref/GPU_IPC/: GIPC.cu  MASPreconditioner.cu  mlbvh.cu
geo/GPU_IPC_SOLID.geo_cache/v1/: GPU_IPC_SOLID.geo_cache_v1.0001.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0002.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0003.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0004.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0005.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0006.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0007.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0008.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0009.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0010.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0011.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0012.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0013.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0014.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0015.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0016.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0017.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0018.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0019.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0020.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0021.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0022.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0023.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0024.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0025.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0026.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0027.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0028.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0029.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0030.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0031.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0032.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0033.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0034.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0035.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0036.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0037.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0038.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0039.bgeo.sc  GPU_IPC_SOLID.geo_cache_v1.0040.bgeo.sc  (+200 more)
src/: ACCD.cu  ACCD.cuh  BlockHessian.cu  BlockHessian.cuh  FEMEnergy.cu  FEMEnergy.cuh  GIPC.cu  GIPC.cuh  GIPC_PDerivative.cuh  IPCFriction.cu  IPCFriction.cuh  ImplicitIntegrator.cu  ImplicitIntegrator.cuh  LBVH.cu  LBVH.cuh  MASPreconditioner.cu  MASPreconditioner.cuh  PCGSolver.cu  PCGSolver.cuh  SortMesh.cu  SortMesh.cuh  gl_main.cpp  load_mesh.cpp  load_mesh.hpp
src/UTILS/: CUDAUtils.hpp  GeometryManager.cpp  GeometryManager.hpp  MathUtils.cu  MathUtils.cuh
